mongoose schemas and models inicialized - vocabulary items schema - category schema - plus initial words added to DB

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
         <form action="/delete" method="post">
         <div class="item">
         <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
-        <p><%=  item.name  %></p>
+        <p><%=  item.name_de  %></p>
       </div>
     </form>
       <% }); %>
