--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,11 @@
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
   min-height: 1000px;
-  font-family: 'helvetica neue';
+  font-family: 'System UI', sans-serif;
+}
+
+footer{
+  margin: 50px auto;
 }
 
 h1 {
@@ -11,8 +14,8 @@ h1 {
 }
 
 .box {
-  max-width: 400px;
-  margin: 50px auto;
+  max-width: 850px;
+  margin: auto;
   background: white;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
@@ -28,6 +31,7 @@ h1 {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #F1F1F1;
+  gap: 10px;
 }
 
 .item:last-child {
@@ -93,4 +97,41 @@ footer {
   color: white;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+}
+
+/* custom styles */
+
+.item_add{
+display: flex;
+
+}
+
+.item_add_inputs{
+  display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 10px;
+grid-row-gap: 10px;
+}
+
+.item_add_submit{
+  display: flex;
+  align-items: center;
+  padding: 40px;
+}
+
+#new-item-box{
+  margin: 50px auto;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
+
+.item{
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr 5fr 1fr;
+}
+
+.starred{
+  color: #e3c983;
 }
