--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,4 +6,24 @@
   
 </footer>
 
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCCY1a98lfT3DJXbwysG0t8TEeV47M4Ny4",
+      authDomain: "myvocab-ba339.firebaseapp.com",
+      projectId: "myvocab-ba339",
+      storageBucket: "myvocab-ba339.appspot.com",
+      messagingSenderId: "490491623411",
+      appId: "1:490491623411:web:314dac41ba9267a598c486"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
+
 </html>
